# karp-s-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
src/karppipeline/: cli.py  common.py  config.py  install.py  logging.py  models.py  read.py  run.py
src/karppipeline/converters/: saolfaksimil.py  ud.py
src/karppipeline/modules/jsonl/: __init__.py
src/karppipeline/modules/karp/: __init__.py
src/karppipeline/modules/karps/: __init__.py  export.py  install.py  models.py
src/karppipeline/modules/sbxmetadata/: __init__.py
src/karppipeline/modules/sbxrepo/: __init__.py  common.py  installer.py  metadata.py  models.py
src/karppipeline/modules/schema/: __init__.py  entry_task.py  schema_creator.py
src/karppipeline/util/: git.py  json.py  yaml.py
src/karpspipeline/: __init__.py  cli.py  common.py  config.py  install.py  logging.py  models.py  read.py  run.py
src/karpspipeline/converters/: saolfaksimil.py  ud.py
src/karpspipeline/csvmetadata/: __init__.py
src/karpspipeline/karp/: __init__.py
src/karpspipeline/karps/: __init__.py  export.py  install.py  models.py
src/karpspipeline/modules/jsonl/: __init__.py
src/karpspipeline/modules/karp/: __init__.py
src/karpspipeline/modules/karps/: __init__.py  export.py  install.py
src/karpspipeline/modules/sbxmetadata/: __init__.py
src/karpspipeline/modules/sbxrepo/: __init__.py  common.py  installer.py  metadata.py  models.py
src/karpspipeline/sbxrepo/: __init__.py  common.py  export.py  install.py  installer.py  metadata.py  models.py
src/karpspipeline/udpos/: __init__.py
src/karpspipeline/util/: frozendict.py  git.py  json.py  terminal.py  yaml.py
tests/: test_config.py
(+1 files in other folders)
