[project]
name = "karps-pipeline"
version = "1.0.0-dev"
description = "Lexical infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "orjson>=3.10.16",
    "mysql-connector-python==9.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
karps-pipeline = "karpspipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karpspipeline"]

