[project]
name = "karps-pipeline"
version = "1.0.0-dev"
description = "Lexical infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema_rs==0.33.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "orjson>=3.10.16",
    "mysql-connector-python==9.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "basedpyright",
]

[project.scripts]
karps-pipeline = "karpspipeline.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karpspipeline"]

