[project]
name = "karp-pipeline"
version = "1.0.0-dev"
description = "Lexical infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema-rs==0.37.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "orjson>=3.11.5",
    "mysql-connector-python==9.5.0",
]

[dependency-groups]
dev = ["ruff", "pytest", "basedpyright"]

[project.scripts]
karp-pipeline = "karppipeline.cli:cli"

[tool.uv]
package = true
